Further condense plugin source