@@ -11,8 +11,6 @@ public final class HealerCodeStoreNormalizer
 
 	public static boolean normalize(StrategyStore store, int currentVersion)
 	{
-		if (store == null) return false;
-
 		boolean changed = store.getVersion() != currentVersion;
 		List<WaveCode> userCodes = new ArrayList<>();
 		for (WaveCode code : store.getWaveCodes())
@@ -51,10 +49,8 @@ public final class HealerCodeStoreNormalizer
 
 	private static boolean normalizeCustomCode(WaveCode code)
 	{
-		if (code == null) return false;
-
 		String source = code.getStoredSourceText();
-		if (source == null || source.trim().isEmpty()) return false;
+		if (source == null || source.isBlank()) return false;
 
 		WaveCode parsed = HealerCodeParser.parseWaveCode(code.getId(), code.getName(), code.getWave(), false, source);
 		code.setCalls(parsed.getCalls());
