@@ -125,7 +125,7 @@ public class HealerCodePanel extends JPanel
 
 	private JButton createEditorButton()
 	{
-		JButton button = BaPanelUi.action("Open Healer Code Editor", this::openDefaultEditorDialog, CONTENT_WIDTH - 10, CONTROL_HEIGHT);
+		JButton button = BaPanelUi.action("Open Healer Code Editor", () -> openEditorDialog(5, null), CONTENT_WIDTH - 10, CONTROL_HEIGHT);
 		button.setIcon(BaIcons.popoutIcon());
 		button.setHorizontalTextPosition(SwingConstants.LEADING);
 		button.setIconTextGap(8);
@@ -354,7 +354,7 @@ public class HealerCodePanel extends JPanel
 	private JMenuItem defaultPresetNoneMenuItem()
 	{
 		String presetId = selectedPresetId();
-		boolean selected = presetId != null && !selectedPresetHasDefaultRole(presetId);
+		boolean selected = presetId != null && codeManager.getDefaultRoleForPreset(presetId) == null;
 		JCheckBoxMenuItem item = new JCheckBoxMenuItem("None", selected);
 		if (selected)
 		{
@@ -435,11 +435,6 @@ public class HealerCodePanel extends JPanel
 		wavePreviewSection.setVisible(true);
 		wavePreviewSection.revalidate();
 		wavePreviewSection.repaint();
-	}
-
-	private void openDefaultEditorDialog()
-	{
-		openEditorDialog(5, null);
 	}
 
 	private void openEditorDialog(int wave, String codeId)
@@ -649,11 +644,6 @@ public class HealerCodePanel extends JPanel
 		return BaPanelUi.selectedId(presetCombo);
 	}
 
-	private boolean selectedPresetHasDefaultRole(String presetId)
-	{
-		return codeManager.getDefaultRoleForPreset(presetId) != null;
-	}
-
 	private BaPanelUi.ComboOption presetComboOption(RunPreset preset)
 	{
 		return new BaPanelUi.ComboOption(
@@ -665,7 +655,7 @@ public class HealerCodePanel extends JPanel
 
 	private String presetComboLabel(RunPreset preset)
 	{
-		String name = escapeHtml(HealerCodeManager.runPresetDisplayName(preset));
+		String name = BaPanelUi.escapeHtml(HealerCodeManager.runPresetDisplayName(preset));
 		HealerCodeDefaultRole defaultRole = codeManager.getDefaultRoleForPreset(preset.getId());
 		if (defaultRole == null) return name;
 
@@ -677,17 +667,9 @@ public class HealerCodePanel extends JPanel
 				+ ")</span></html>";
 	}
 
-	private static String escapeHtml(String value)
-	{
-		return value
-				.replace("&", "&amp;")
-				.replace("<", "&lt;")
-				.replace(">", "&gt;");
-	}
-
 	private static boolean isBlank(String value)
 	{
-		return value == null || value.trim().isEmpty();
+		return value == null || value.isBlank();
 	}
 
 	private String promptName(String title, String defaultValue)
@@ -695,7 +677,7 @@ public class HealerCodePanel extends JPanel
 		JTextField field = new JTextField(defaultValue);
 		BaPanelUi.fixedSize(field, PRESET_CONTROL_WIDTH, CONTROL_HEIGHT);
 		int result = JOptionPane.showConfirmDialog(this, field, title, JOptionPane.OK_CANCEL_OPTION);
-		if (result != JOptionPane.OK_OPTION || field.getText().trim().isEmpty()) return null;
+		if (result != JOptionPane.OK_OPTION || field.getText().isBlank()) return null;
 		return field.getText().trim();
 	}
 
