@@ -75,6 +75,6 @@ final class TileMarkerExportSummary
 
 	private static boolean isBlank(String value)
 	{
-		return value == null || value.trim().isEmpty();
+		return value == null || value.isBlank();
 	}
 }
