@@ -61,6 +61,6 @@ public class TileMarkerStrategyPreset
 	@Override
 	public String toString()
 	{
-		return name == null || name.trim().isEmpty() ? "Unnamed strategy" : name;
+		return name == null || name.isBlank() ? "Unnamed strategy" : name;
 	}
 }
